# app_development_HW_2-

./: .dockerignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yaml  engine.py  main.py  pyproject.toml  requirements.txt  test.db  ЛР 2.docx  ЛР 3.docx  ЛР4.docx  ЛР5.docx  ЛР6.docx  ЛР7.docx
app/: main.py
app/API/modules/order_module/: order_controller.py
app/API/modules/order_module/DTO/requests/: order_create_request_dto.py  order_update_request_dto.py
app/API/modules/order_module/DTO/responses/: get_order_response_dto.py
app/API/modules/product_module/: product_controller.py
app/API/modules/product_module/DTO/requests/: product_create_request_dto.py  product_update_request_dto.py
app/API/modules/product_module/DTO/responses/: get_product_response_dto.py
app/API/modules/user_module/: user_controller.py
app/API/modules/user_module/DTO/: user_base.py
app/API/modules/user_module/DTO/requests/: user_create_request_dto.py  user_update_request_dto.py
app/API/modules/user_module/DTO/responses/: get_user_response_dto.py
app/rabbitmq/: consumer.py
app/repositories/: __init__.py  order_repository.py  product_repository.py  user_repository.py
app/services/: order_service.py  product_service.py  user_service.py
app/tests/: conftest.py
app/tests/test_api/: test_order_contoller.py  test_product_controller.py  test_user_contoller.py
app/tests/test_repository/: test_order_repository.py  test_product_repository.py  test_user_repository.py
app/tests/test_service/: test_order_service.py
docker/: entrypoint.sh
migrations/: env.py
migrations/versions/: 14992d0ffd59_add_order_products_table.py  17985ce9c36f_.py  1f716cbde488_add_order_products_table.py  22979b1c4692_add_order_products_table.py  357498dd5c11_add_order_products_table.py  375f2e24c5a6_nullable_address_id.py  47ca0271e5fe_.py  4bfd37b41d80_add_order_products_table.py  605d7aa2e05c_.py  884c413e4a16_add_order_products_table.py  9c5bd1c0ee27_add_order_products_table.py  b2fb2b2957ca_.py  b6440a8db2b6_add_order_products_table.py  d57a14624bd1_add_order_products_table.py
sql_schemas/: Address.py  Order.py  OrderProduct.py  Product.py  User.py  __init__.py
