[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "Python project"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "*"
alembic = "1.17.0"
annotated-types = "0.7.0"
anyio = "4.11.0"
asyncpg = "0.30.0"
certifi = "2025.10.5"
click = "8.3.0"
colorama = "0.4.6"
Faker = "37.12.0"
greenlet = "3.2.4"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.11"
litestar = "2.18.0"
litestar-htmx = "0.5.0"
Mako = "1.3.10"
markdown-it-py = "4.0.0"
MarkupSafe = "3.0.3"
mdurl = "0.1.2"
msgspec = "0.19.0"
multidict = "6.7.0"
multipart = "1.3.0"
polyfactory = "2.22.3"
psycopg2-binary = "2.9.11"
pydantic = "2.12.4"
pydantic-core = "2.41.5"
Pygments = "2.19.2"
PyYAML = "6.0.3"
rich = "14.2.0"
rich-click = "1.9.4"
sniffio = "1.3.1"
SQLAlchemy = "2.0.44"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
tzdata = "2025.2"
uvicorn = "0.38.0"
aiosqlite = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.scripts]
start = "app.main:start"
tests = "app.main:run_tests"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
asyncio_mode = "auto"
addopts = "--verbose --color=yes"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
